Add queue view in frontend Move songs in the queue Remove separate add song card from the list
